--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <title>Document</title>
     
-  <link rel="stylesheet" href="/assets/index.fd03c685.css">
+  <link rel="stylesheet" href="assets/index.fd03c685.css">
 </head>
 
 <body class="bg-[#F7F7F7] flex items-center justify-center flex-col">
